[UPD] 로그인 서버 연동 및 FCM Token 발급

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">감사과</string>
+    <string name="default_notification_channel_id">gamsagwa_channel</string>
 </resources>
