--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">감사과</string>
     <string name="default_notification_channel_id">gamsagwa_channel</string>
+    <string name="default_notification_channel_name">gamsagwa_channel_name</string>
 </resources>
